--- a/unit_tests/unit_tests.vcxproj.filters
+++ b/unit_tests/unit_tests.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="test_reflect_structs.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="deserialize_flag.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="flag.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
