--- a/ReflectionLib/ReflectionLib.vcxproj.filters
+++ b/ReflectionLib/ReflectionLib.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="ReflectionValue.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="ReflectionGlobals.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ReflectionLib.cpp">
